# LpBound

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
benchmarks/experiments/: accuracy_acyclic.py  accuracy_cyclic.py  accuracy_groupby.py  estimation_time.py  evaluation_time.py  lpbase_lpflow_lpberge_comparison.py  mcv_effectiveness.py  num_norms_effectiveness.py  space_usage.py  statistics_computation_time.py
benchmarks/schemas/: jobjoin_schema.json  joblight_schema.json  jobrange_schema.json  stats_schema.json  subgraph_matching_schema.json
benchmarks/workloads/jobjoin/: jobjoinQueries.sql  jobjoinQueriesWOSelfJoins.sql  jobjoin_relation_counts.csv  jobjoin_subqueries.csv
benchmarks/workloads/joblight/: joblight_relation_counts.csv  joblight_subqueries.csv
benchmarks/workloads/joblight_gby/: joblight_groupby_large.sql  joblight_groupby_large_relation_counts.csv  joblight_groupby_mixed.sql  joblight_groupby_mixed_relation_counts.csv  joblight_groupby_small.sql  joblight_groupby_small_relation_counts.csv
benchmarks/workloads/jobrange/: jobrange_relation_counts.csv  jobrange_subqueries.csv
benchmarks/workloads/jobrange_gby/: jobrange_groupby_large.sql  jobrange_groupby_large_relation_counts.csv  jobrange_groupby_mixed.sql  jobrange_groupby_mixed_relation_counts.csv  jobrange_groupby_small.sql  jobrange_groupby_small_relation_counts.csv
benchmarks/workloads/stats/: statsQueries.sql  stats_relation_counts.csv  stats_subqueries.csv
benchmarks/workloads/stats_gby/: stats_groupby_large.sql  stats_groupby_large_relation_counts.csv  stats_groupby_mixed.sql  stats_groupby_mixed_relation_counts.csv  stats_groupby_small.sql  stats_groupby_small_relation_counts.csv
data/: download_imdb_data.sh  postgresql.conf  psql_create_job_benchmark.sh  psql_create_stats_benchmark.sh  psql_create_subgraph_matching_benchmark.sh
data/datasets/dblp/: dblp_vertex.csv
data/lps/jobjoin_lpberge/: jobjoin_full_estimations_1.lp  jobjoin_full_estimations_10.lp  jobjoin_full_estimations_11.lp  jobjoin_full_estimations_2.lp  (+27 more)
notebooks/: accuracy_acyclic.ipynb  accuracy_acyclic_stepped.ipynb  accuracy_cyclic.ipynb  accuracy_groupby.ipynb  color_schema.py  estimation_time.ipynb  evaluation_time.ipynb  mcv_effectiveness.ipynb  num_norms_effectiveness.ipynb  optimization_analysis.ipynb  runtime_by_method.ipynb
output/statistics_sql/: jobjoin_lpnorm_queries.sql  joblight_groupby_lpnorm_queries.sql  joblight_lpnorm_queries.sql  jobrange_groupby_lpnorm_queries.sql  jobrange_lpnorm_queries.sql  stats_lpnorm_queries.sql  subgraph_matching_lpnorm_queries.sql
results/accuracy_cyclic/: dbx_estimates.txt  duckdb_estimates.txt  postgres_estimates.txt  true_cards.csv
results/estimation_time/: flow_bound_timing_results.csv  flow_bound_timing_results_p_30.csv  runtimes_elemental_shannon_lpbound_agg.csv  runtimes_optimized_lpbound.txt
results/space_usage/: lpbound.txt  postgres.txt  safebound.txt
results/statistics_computation_time/: lpbound.txt  safebound.txt
src/lpbound/cpp_solver/: CMakeLists.txt  compile.sh  utils.py
src/lpbound/cpp_solver/lpbound_parallel/: CMakeLists.txt  compile.sh  constraints.py  create_input_files.py  create_input_files_subqueries.py  run_lpbase.sh  run_lpberge.sh
src/lpbound/cpp_solver/lpbound_parallel/input_data_full_queries/jobjoin_lpbase/: objective_function_1.json  objective_function_14.json  objective_function_17.json  objective_function_3.json  objective_function_30.json  objective_function_7.json  query_stats_ineq_1.json  query_stats_ineq_10.json  query_stats_ineq_11.json  query_stats_ineq_12.json  query_stats_ineq_14.json  query_stats_ineq_16.json  query_stats_ineq_17.json  query_stats_ineq_18.json  query_stats_ineq_2.json  query_stats_ineq_3.json  query_stats_ineq_30.json  query_stats_ineq_4.json  query_stats_ineq_5.json  query_stats_ineq_6.json  query_stats_ineq_7.json  query_stats_ineq_8.json  query_stats_ineq_9.json  query_vars_1.json  query_vars_10.json  query_vars_11.json  query_vars_12.json  query_vars_14.json  query_vars_16.json  query_vars_17.json  query_vars_18.json  query_vars_2.json  query_vars_3.json  query_vars_30.json  query_vars_4.json  query_vars_5.json  query_vars_6.json  query_vars_7.json  query_vars_8.json  query_vars_9.json  (+7 more)
src/lpbound/cpp_solver/lpbound_parallel/src/: lpbound_parallel.cpp
src/lpbound/cpp_solver/src/: lp_construction.cpp  lp_construction.h  lp_construction_wrapper.pyx  setup.py  test_powerset.cpp
(+666 files in other folders)
